adding module-info.java